# cs_python

./: .gitignore  README.md  README.txt  api-docs.json  dev_requirements.txt  example.py  gui.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: CI.yml  main.yml
cryptshare/: ApiRequestHandler.py  Client.py  CryptshareApiRequestHandler.py  CryptshareApiRequests.py  CryptshareClient.py  CryptshareDownload.py  CryptshareHeader.py  CryptshareNotificationMessage.py  CryptshareSender.py  CryptshareTransfer.py  CryptshareTransferPolicy.py  CryptshareTransferSecurityMode.py  CryptshareTransferSettings.py  CryptshareValidators.py  Download.py  Header.py  NotificationMessage.py  SecurityMode.py  Sender.py  Transfer.py  TransferFile.py  TransferSettings.py  __init__.py  base_client.py  client.py  download.py  helpers.py  sender.py  transfer.py  transfer_policy.py  transfer_security_mode.py  transfer_settings.py  validators.py
examples/example_files/: test_file.txt
examples/gui_example/: gui.py  logging_config.json  requirements.txt
examples/shell_example/: example.py  helpers.py  logging_config.json  receive_transfer.py  receive_transfer_interactive.py  receive_transfer_url.py  requirements.txt  send_transfer.py  send_transfer_interactive.py  status_transfer.py  status_transfer_interactive.py  transfer_status.py
tests/: test_cryptshare.py  test_shell_example.py  tests.py
